# Master_NEATER

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md
include/: Helper.hpp  NEATERHelper.hpp
src/: ALEWrapper.cpp  ALEWrapper.hpp  Connection.cpp  Connection.hpp  Genus.cpp  Genus.hpp  IOANN.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Node.cpp  Node.hpp  SnakeWrapper.cpp  SnakeWrapper.hpp  Specie.cpp  Specie.hpp  Zone.cpp  Zone.hpp
src/Graphical/: Graphical.cpp  Graphical.hpp
src/NEATER/: IOANN.hpp  MutationTypes.hpp  NEATERGenus.cpp  NEATERGenus.hpp  NEATERNeuralNetwork.cpp  NEATERNeuralNetwork.hpp  NEATERSpecie.cpp  NEATERSpecie.hpp  Zone.cpp  Zone.hpp
src/NEATER/NEAT/: Connection.hpp  Genus.cpp  Genus.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Node.hpp  Specie.cpp  Specie.hpp
